opam-version: "1.2"
maintainer: "Liang Wang <ryanrhymes@gmail.com>"
authors: [ "Liang Wang" ]
license: "MIT"
homepage: "https://github.com/owlbarn/owl_jupyter"
dev-repo: "git+https://github.com/owlbarn/owl_jupyter.git"
bug-reports: "https://github.com/owlbarn/owl_jupyter/issues"
doc: "https://ocaml.xyz/owl/"
synopsis: "Owl - Jupyter Wrappter"
description: """
Owl-Jupyter is Owl's wrappter on Jupyter Notebook.
"""


build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "owl-top"
  "owl-plplot"
  "jupyter"
  "dune" {build}
]

available: [ ocaml-version >= "4.06.0" ]
